--- a/style/main.css
+++ b/style/main.css
@@ -63,7 +63,7 @@ header nav a:hover {
 
 .filme-principal {
     font-size: 16px;
-    background: linear-gradient(to right, rgba(0,0,0,.50) , rgba(0,0,0,0) 50%), 
+    background: (linear-gradient(to right, rgba(0,0,0,.50) , rgba(0,0,0,0) 50%)), 
         url('/img/capa-twin-peaks.jpg');
     background-size: cover;
     background-position: center top;
