--- a/style/main.css
+++ b/style/main.css
@@ -64,7 +64,7 @@ header nav a:hover {
 .filme-principal {
     font-size: 16px;
     background: linear-gradient(to right, rgba(0,0,0,.50) , rgba(0,0,0,0) 50%), 
-        url('/desafio-netflix/img/capa-twin-peaks.jpg');
+        url('../img/capa-twin-peaks.jpg');
     background-size: cover;
     background-position: center top;
     height: 50vw;
