--- a/style/main.css
+++ b/style/main.css
@@ -30,7 +30,7 @@ header .container {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
-   padding: 8px 0;
+   height: 73px;
    margin-bottom: -73px;
 }
 
@@ -74,7 +74,7 @@ header nav a:hover {
     flex-direction: column;
     justify-content: end;
     align-items: flex-start;
-    padding-bottom: clamp(120px, 13%, 180px);
+    padding-bottom: clamp(140px, 13%, 180px);
     z-index: 10;
 }
 
@@ -84,7 +84,7 @@ header nav a:hover {
 
 .titulo {
     font-size: 40px;
-    font-family: font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -138,7 +138,7 @@ header nav a:hover {
 }
 
 .carrousel-filmes {
-    margin-left: clamp(28px, 4%, 50px);
+    margin: 0 clamp(28px, 4%, 50px);
     margin-top: -80px;
     margin-bottom: 40px;
 }
